# DroneSimulator

./: .gitignore  CMakeLists.txt  README.md
include/: commands.hpp  drone.hpp
lib/: logger.cpp  logger.hpp
src/: commands.cpp  drone.cpp  main.cpp
test/: test_commands.cpp  test_drone.cpp
